Full Site Design

--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,74 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Just Practics</title>
   </head>
-  <body></body>
+  <body>
+    <section class="felxibal_part main_part">
+      <div class="welcome_part widht-half">
+        <h1>
+          Welcome To <br />
+          <span>Ahmed Hossain </span>World
+        </h1>
+        <h3>Build Climber and Train Stopper</h3>
+        <p>
+          You might saw me jumping, climbing buildings, and stopping trains. But
+          nobody pays me a dime for that work. That's why I am learning and
+          mastering web development. I will not stop until I become the Web
+          Development Hero.
+        </p>
+        <div class="button"><a href="#">Hire Me</a></div>
+      </div>
+      <div class="wlcimgpart widht-half">
+        <img src="Image/my-bg.png" alt="Ahmed Photo" class="img-fluid" />
+      </div>
+    </section>
+    <section class="felxibal_part resume_main_part">
+      <div class="resume_img_part widht-half">
+        <img src="image/my-bg2.png" alt="ahmed hossain" />
+      </div>
+      <div class="resume_content widht-half">
+        <h2>Dream Big</h2>
+        <h3>Become a web developer</h3>
+        <p>
+          I already learned the basic HTML and CSS. I can build any simple
+          website. I can even teach my grandma how to make simple website. My
+          goal is to build 3 websites and learn advanced topics.
+        </p>
+        <div class="button"><a href="#">Download Resume</a></div>
+      </div>
+    </section>
+    <section class="exprience_part">
+      <h1>Experiences</h1>
+
+      <div class="expreince_conent felxibal_part">
+        <div class="full_stak_developer">
+          <h2>Full Stack Web Developer</h2>
+          <h5>2021-Present | Pro Level Developer</h5>
+          <p>
+            I am the master of HTML, CSS and Javascript. I know everything
+            needed to make a website function, efficient. I didn't stop with the
+            web. I went beyond with most popular Javascript framework called Vue
+            JS. I even know the deployment, server and security. I will give you
+            100% web solution.
+          </p>
+        </div>
+        <div class="full_stak_developer_w">
+          <h2>Full Stack Web Developer</h2>
+          <h5>2021-Present | Pro Level Developer</h5>
+          <p>
+            I am the master of HTML, CSS and Javascript. I know everything
+            needed to make a website function, efficient. I didn't stop with the
+            web. I went beyond with most popular Javascript framework called Vue
+            JS. I even know the deployment, server and security. I will give you
+            100% web solution.
+          </p>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
+    </footer>
+  </body>
 </html>
